--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live-practice",
+  "name": "walpaper-guesser",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build:watch": "tsc -w",
-    "start": "node dist",
-    "start:watch": "nodemon dist",
+    "start": "node dist/index.js",
+    "start:watch": "nodemon dist/index.js",
     "dev": "npm run build && (npm run build:watch & npm run start:watch)",
     "go": "npm run build && npm run start"
   },
@@ -20,18 +20,21 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node-fetch": "^2.6.11",
+    "@types/socket.io": "^3.0.2",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.0.0-beta.1",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
     "reflect-metadata": "^0.2.1",
+    "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.19"
   }
